Change symbol & to _.

--- a/project/contrast-enhancements.ipynb
+++ b/project/contrast-enhancements.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_DIR = './t20&tam'\n",
+    "BASE_DIR = './t20_tam'\n",
     "\n",
     "train_files = []\n",
     "train_data = []\n",
@@ -236,7 +236,7 @@
     "\n",
     "    for i in range(n):\n",
     "        try:\n",
-    "            cv.imwrite(f'./t20&tam-clahe/{part}/{filenames[i]}', cv.cvtColor(apply_CLAHE(images[i]), cv.COLOR_RGB2BGR))\n",
+    "            cv.imwrite(f'./t20_tam-clahe/{part}/{filenames[i]}', cv.cvtColor(apply_CLAHE(images[i]), cv.COLOR_RGB2BGR))\n",
     "        except Exception as e:\n",
     "            print(f'Unable to write {filenames[i]}: \\n {e}')"
    ]
@@ -328,14 +328,6 @@
     "plt.suptitle(f'{test_files[2]}')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3cd1f49-93a8-42fc-974d-9bd05680cb88",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
